--- a/ajaxprogram2.html
+++ b/ajaxprogram2.html
@@ -2,25 +2,31 @@
 <html>
 <body>
 
+<div id="demo">
+
 <h1>The XMLHttpRequest Object</h1>
 
-<button type="button" onclick="loadDoc()">Request data</button>
-
-<p id="demo"></p>
-
+<button type="button"
+onclick="loadDoc('ajax_info.txt', myFunction)">Change Content
+</button>
+</div>
 
 <script>
-function loadDoc() {
-  var xhttp = new XMLHttpRequest();
+function loadDoc(url, cFunction) {
+  var xhttp;
+  xhttp=new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML = this.responseText;
+      cFunction(this);
     }
   };
-  xhttp.open("GET", "ajax_info.txt", true);
+  xhttp.open("GET", url, true);
   xhttp.send();
 }
+function myFunction(xhttp) {
+  document.getElementById("demo").innerHTML =
+  xhttp.responseText;
+}
 </script>
-
 </body>
 </html>
